tests/NormalTests/paczka1/fuzzy1/34157101.err
Error in line 21: OLlROSrnHb A709 60,2
Error in line 29: DIXo4 A283 65,4
